prevent img from overflowing (#201)

--- a/www/assets/css/theme.css
+++ b/www/assets/css/theme.css
@@ -179,7 +179,7 @@ figure {
 figure figcaption,
 figure img {
   margin: auto;
-  max-width: 45em;
+  max-width: 100%;
 }
 
 img {
